Got tile movement working, fixed some css spacing, started logic for checking adjacent squares

--- a/style.css
+++ b/style.css
@@ -1,17 +1,13 @@
 ul {
     list-style-type: none;
 }
-.sliding-puzzle-figure {
-    max-width: 230px;
-    max-height: 230px;
-}
 .sliding-puzzle{
     border-radius: 5px;
     background: black;
     position: relative;
     height: 230px;
     width: 230px;
-    padding: 1px;
+    padding: 0px;
  }
 .tile {
     position: absolute;
